tests/machine/x/ocaml/for_map_collection.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/for_map_collection.ml", line 24, characters 36-56:
24 | let m : (string * Obj.t) list ref = ref { a = 1; b = 2 }
                                         ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type record1 ref
       but an expression was expected of type (string * Obj.t) list ref
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 24):
  22 |   type record1 = { mutable a : int; mutable b : int }
  23 | 
  24 | let m : (string * Obj.t) list ref = ref { a = 1; b = 2 }
  25 | 
  26 | let () =
